feat: add spotify track downloader api
